--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ body {
 /* START of Outer-container style */
 .outer-container {
     background-color: rgb(85, 83, 83);
-    width: 300px;/* Recent changes */ 
-    border-radius: 70px; /* Recent changes */
+    width: 300px;
+    border-radius: 70px; 
     display: flex;
     align-items: center;
-    height: 400px;/* Recent changes */ 
+    height: 400px;
 }
 
 /* END of Outer-container style */
@@ -27,13 +27,13 @@ body {
 .inner-container {
     background-color: black;
     width: 100%;
-    border-radius: 70px; /* Recent changes */
+    border-radius: 70px; 
     display: flex;
     flex-direction: column;
     align-content: center;
     justify-content: center;
     overflow: hidden;
-    height: 375px;/* Recent changes */ 
+    height: 94%;
 }
 
 /* END of inner-container style */
@@ -66,22 +66,22 @@ body {
     font-size: 3rem;
     font-weight: 600;
 }
-
 /* END of timer p tag style which is inside main div */
 
 /* START of day p tag style which is inside main div */
 #day {
     font-weight: 300;
 }
-
 /* END of day p tag style which is inside main div */
 
 /* START of menu div style which is inside inner-container div */
 .menu {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 100%;
+    grid-template-rows: 90px;
     overflow: hidden;
+    justify-content: end;
+    align-content: end;
 }
 
 .menu > div{
@@ -97,7 +97,6 @@ img {
 }
 
 .hover:hover {
-    /* filter: invert(100%); */
     opacity: 0.7;
 }
 
